# 3D_Face_Matching

./: CMakeLists.txt  README.md  expression_transfer.cpp  main.cpp  video_analyze.cpp
datasets/: input_face2.anl  input_small.anl
datasets/clip1/: input_image_0001.anl  input_image_0002.anl  input_image_0003.anl  input_image_0004.anl  input_image_0005.anl  input_image_0006.anl  input_image_0007.anl  input_image_0008.anl  input_image_0009.anl  input_image_0010.anl  input_image_0011.anl  input_image_0012.anl  input_image_0013.anl  input_image_0014.anl  input_image_0015.anl  input_image_0016.anl  input_image_0017.anl  input_image_0018.anl  input_image_0019.anl  input_image_0020.anl  input_image_0021.anl  input_image_0022.anl  input_image_0023.anl  input_image_0024.anl  input_image_0025.anl  input_image_0026.anl  input_image_0027.anl  input_image_0028.anl  input_image_0029.anl  input_image_0030.anl  input_image_0031.anl  input_image_0032.anl  input_image_0033.anl  input_image_0034.anl  input_image_0035.anl  input_image_0036.anl  input_image_0037.anl  input_image_0038.anl  input_image_0039.anl  input_image_0040.anl  (+55 more)
src/: bfm_manager.cpp  bfm_manager.h  constants.hpp  data.h  debug.h  dense_opt.h  optimizer.cpp  optimizer.h  parameters.h  pixeltransfer.h  reg_opt.h  render.cpp  render.h  sparse_opt.h  visualizer.h
src/utils/: render_util.h  util.cpp  util.h
tools/: images_to_video.sh  landmark_detector.py  prepare_video.sh
